# engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: challenge.wgsl  trapeprism.mtl  trapezoidal_prism.mtl
assets/blender/: trapezoidal_prism.blend1
assets/shaders/: challenge.wgsl  shader.wgsl
benchmarks/file_types/: Cargo.toml  readme.md
benchmarks/file_types/src/: main.rs
benchmarks/frame_counter/: Cargo.toml  readme.md
benchmarks/frame_counter/src/: main.rs
benchmarks/many_meshes/: Cargo.toml
benchmarks/many_meshes/src/: main.rs
crates/ne/: Cargo.toml
crates/ne/src/: ne.rs
crates/ne_app/: Cargo.toml  readme.md
crates/ne_app/src/: lib.rs  ne_app.rs  types.rs
crates/ne_app1/: Cargo.toml
crates/ne_app1/src/: lib.rs
crates/ne_bench/: Cargo.toml
crates/ne_bench/src/: fpsdata.rs  ne_bench.rs  size_of.rs  thread.rs  timer.rs
crates/ne_ecs/: Cargo.toml
crates/ne_ecs/src/: ne_ecs.rs
crates/ne_files/: Cargo.toml
crates/ne_files/src/: ne_files.rs
crates/ne_gui/: Cargo.toml
crates/ne_gui/src/: lib.rs
crates/ne_gui/src/old/: lib.rs
crates/ne_gui/src/old/interface/: mod.rs
crates/ne_input/: Cargo.toml
crates/ne_internal/: Cargo.toml
crates/ne_internal/src/: ne_internal.rs  prelude.rs
crates/ne_log/: Cargo.toml
crates/ne_log/src/: ne_log.rs
crates/ne_math/: Cargo.toml
crates/ne_math/src/: lib.rs
crates/ne_plugin_parent/: Cargo.toml
crates/ne_plugin_parent/src/: lib.rs
crates/ne_render/: Cargo.toml  readme.md
crates/ne_render/src/: basic_cube.wgsl  camera.rs  depth_texture.rs  material.rs  math.rs  mesh.rs  model.rs  my_camera.rs  ne_render.rs  render_structs.rs  resources.rs  scene.rs  shapes.rs  texture.rs  transform.rs  vertex.rs
crates/ne_render/src/cameras/: camera_helper.rs  fps_camera.rs  free_fly_camera.rs  look_at_camera.rs  mod.rs
crates/ne_render/src/interface/: mod.rs
crates/ne_render/src/render_modules/: mod.rs  render_pass.rs
crates/ne_render/src/user_interface/: basic_window.rs  editor_widget.rs  egui_window.rs  mod.rs  ui_render_pass.rs
crates/ne_task/: Cargo.toml
crates/ne_task/src/: ne_task.rs  thread_pool.rs
crates/ne_task/src/thread_pool/: mod.rs
crates/ne_utils/: Cargo.toml
crates/ne_utils/src/: ne_utils.rs
crates/ne_window/: Cargo.toml
crates/ne_window/src/: events.rs  lib.rs  ne_window.rs  window.rs  windows.rs
engine_assets/: pointy_tower.fbx  pointy_tower.glb  pointy_tower.mtl
engine_assets/3D/: cube.mtl  cube_red.glb  cute_holder_1col.mtl  cute_holder_1color.glb  cute_holder_2col.mtl  cute_holder_3col.mtl  cute_holder_3color.glb
engine_assets/blender/: trapezoidal_prism.blend
engine_assets/shaders/: ui_shader.wgsl
engine_assets/shapes/: wheel.mtl
examples/: TODO.txt
examples/scene_example_game/: Cargo.toml
examples/scene_example_game/src/: main.rs
examples/train/: Cargo.toml
examples/walker/: Cargo.toml
logs/: log.log.2022-07-21  log.log.2022-07-22
ne_editor/: Cargo.toml  readme.md
ne_editor/logs/: log.log.2022-08-03
ne_editor/src/: build.rs  main.rs  projectmacros.rs
ne_editor/src/interface/: basic_window.rs  mod.rs
src/: app.rs  consts.rs  lib.rs  prelude.rs
src/app1/: mod.rs
