[package]
name = "nightmare_engine"
version = "0.1.0"
edition = "2021"
[toolchain]
channel = "nightly"

[dependencies]

# logging
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

ne = {path = "crates/ne"}
ne_render = {path = "crates/ne_render"}

pollster = "0.2"


# ne_files = {path = "crates/ne_files"}
# egui-wgpu = "0.18.0"

#wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[workspace]
resolver = "2" # can remove
members = [
    "ne_editor",
    "crates/*",
]




# [features]
# default = [
# #     "winit",
# #   "render",
# #   "animation",
# #   "bevy_audio",
# #   "png",
# #   "x11",
# ]