[package]
name = "ne_editor"
version = "0.1.0"
edition = "2021"
description = "State of the art"
keywords = ["game", "nightmare", "engine", "gamedev", "graphics" ] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
nightmare_engine = {path = "../" }

ne = {path = "../crates/ne"}
ne_files = {path = "../crates/ne_files"}
ne_app = {path = "../crates/ne_app"}
ne_window = {path = "../crates/ne_window"}
ne_render = {path = "../crates/ne_render"}
ne_gui = {path = "../crates/ne_gui"}


# Bevy
bevy_ecs = "0.8.1"
# ne_minimum = {path = "../crates/ne_minimum"}
# L = {path = "../crates/ne_log"} #, features = ["release_max_level_off"] 
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

chrono = "0.4.22"
# [features]
# default = ["path_checker"]
