[package]
name = "ne_editor"
version = "0.1.0"
edition = "2021"
description = "State of the art"
keywords = ["game", "nightmare", "engine", "gamedev", "graphics" ] 
homepage = "https://nightmare-corp.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
nightmare_engine = {path = "../"}

ne = {path = "../crates/ne"}
ne_files = {path = "../crates/ne_files"}
ne_app = {path = "../crates/ne_app"}
ne_window = {path = "../crates/ne_window"}
ne_render = {path = "../crates/ne_render", features = [  "first_frame_time", "start_time", "ui"] }
ne_gui = {path = "../crates/ne_gui"}
ne_math = {path = "../crates/ne_math"}

# remove
ne_bench = {path = "../crates/ne_bench"}
# Bevy
bevy_ecs = "0.8.1"
bevy_asset = "0.8.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
# [features]
# default = ["path_checker"]
