[package]
name = "ne_editor"
version = "0.1.0"
edition = "2021"
description = "State of the art"
keywords = ["game", "nightmare", "engine", "gamedev", "graphics" ] 
homepage = "https://nightmare-corp.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#minimize binary size, while keeping similar fps.
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
nightmare_engine = {path = "../"}

ne = {path = "../crates/ne"}
ne_files = {path = "../crates/ne_files"}
ne_app = {path = "../crates/ne_app"}
ne_window = {path = "../crates/ne_window"}
ne_render = {path = "../crates/ne_render", features = [ "start_time", "editor_ui", "mesh_16bit"] }
ne_math = {path = "../crates/ne_math"}

# 
bytemuck = { version = "1.4", features = [ "derive" ] }
pollster = "0.2"

# remove
ne_bench = {path = "../crates/ne_bench"}
# Bevy
bevy_ecs = "0.9.0"
bevy_derive = "0.9.0"
tracing = "0.1.35"
tracing-subscriber = { version ="0.3.14", features = ["env-filter"] }
# [features]
# default = ["path_checker"]
