[package]
name = "file_types"
version = "0.1.0"
edition = "2021"
description = "State of the art"
keywords = ["game", "nightmare", "engine", "gamedev", "graphics" ] 
homepage = "https://nightmare-corp.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
nightmare_engine = {path = "../../" }

ne = {path = "../../crates/ne"}
ne_bench = {path = "../../crates/ne_bench"}

wgpu = { version = "0.13", features = ["webgl"]}

instant = "0.1"
once_cell = "1.14.0"
# Bevy
bevy_ecs = "0.9.0"
bevy_asset = "0.9.0"
# ne_minimum = {path = "../crates/ne_minimum"}
# L = {path = "../crates/ne_log"} #, features = ["release_max_level_off"] 
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
# [features]
# default = ["path_checker"]
