[package]
name = "many_meshes"
version = "0.1.0"
edition = "2021"
description = "State of the art"
keywords = ["game", "nightmare", "engine", "gamedev", "graphics" ] 
homepage = "https://nightmare-corp.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



#TODO minimize binary size, while keeping similar fps.
# [profile.release]
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

[dependencies]
ne = {path = "../../crates/ne"}
ne_files = {path = "../../crates/ne_files"}
ne_app = {path = "../../crates/ne_app"}
ne_window = {path = "../../crates/ne_window"}
ne_render = {path = "../../crates/ne_render", features = [ "first_frame_time", "start_time","editor_ui"] }
# Bevy
bevy_ecs = "0.8.1"
bevy_asset = "0.8.1"

instant = "0.1"
once_cell = "1.14.0"
# ne_minimum = {path = "../crates/ne_minimum"}
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
# [features]
# default = ["path_checker"]
