[package]
name = "ne_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
first_frame_time = []
start_time = []

[dependencies]
bevy_ecs = "0.8.1"
tracing = "0.1.35"
ne = { path = "../ne" }
num_cpus = "1.13.1"
instant = "0.1"

[lib]
path = "src/ne_app.rs" 