[package]
name = "ne_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ne = {path = "../ne"}
#TODO should only be activated when testing all dirs
# [target.'cfg(MACROTEST)'.dependencies]

[lib]
path = "src/ne_files.rs" 

