[package]
name = "ne_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egui = { version = "0.19.0", default-features = false, features = [
#     "bytemuck",
# ] }
egui = "0.18.0"
egui_wgpu_backend = "0.18.0"
wgpu = "0.13"
wgpu-types = "0.13.0"
ne_render = {path = "../ne_render"}