[package]
name = "ne_internal"
version = "0.1.0"
edition = "2021"
description = "nightmare_engine crate for optional dynamic linking use the 'dyn' feature"
homepage = "https://nightmare-corp.com"

[features]

[dependencies]
ne = {path = "../ne"}
ne_app = {path = "../ne_app"}
ne_bench = {path = "../ne_bench"}
# Bevy
bevy_ecs = "0.8.1"
ne_files = {path = "../ne_files"}
# ne_input = {path = "../ne_input"} #TODO
ne_log = {path = "../ne_log"}
ne_math = {path = "../ne_math"}
ne_render = {path = "../ne_render"}
ne_utils = {path = "../ne_utils"}
# ne_window = {path = "../ne_window"} #TODO

[lib]
path = "src/ne_internal.rs"