[package]
name = "ne_log"
version = "0.1.0"
edition = "2021"
description = "Provides logging"
homepage = "https://nightmare-corp.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tracing-appender = "0.2.2"
[lib]
path = "src/ne_log.rs" 