[package]
name = "ne_log"
version = "0.1.0"
edition = "2021"
description = "Provides logging"
homepage = "https://nightmare-corp.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version ="0.3.14", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-error = "0.2.0"
ne_app = {path = "../ne_app"}

[lib]
path = "src/ne_log.rs" 