[package]
name = "ne_math"
version = "0.1.0"
edition = "2021"
homepage = "https://nightmare-corp.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO serde and bytemuck
glam = { version = "0.21.3", features = ["serde", "bytemuck"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
