[package]
name = "ne_render"
version = "0.1.0"
edition = "2021"

[dependencies]
ne = {path = "../ne"}
ne_files = {path = "../ne_files"}
ne_app1 = {path = "../ne_app1"}

instant = "0.1"
tracing = "0.1.35"
# wgpu
cfg-if = "1"
glam = "0.21.3"
image = "0.23"
cgmath = "0.18"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0" 
tobj = { version = "3.2.1", features = [
    "async",
]}
# wasm32 not tested yet.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11" }
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[lib]
path = "src/ne_render.rs" 