[package]
name = "ne_render"
version = "0.1.0"
edition = "2021"
homepage = "https://nightmare-corp.com"

[features]
start_time = []
editor_ui = ["egui"]
mesh_16bit = []
[dependencies]
ne = {path = "../ne"}
ne_files = {path = "../ne_files"}
ne_app = {path = "../ne_app", features = [ "start_time"] }
ne_window = {path = "../ne_window"}
ne_math = {path = "../ne_math"}
ne_bench = {path = "../ne_bench"}
# requires nightly rust compiler
rapier3d = {version = "0.16.0", features = ["simd-nightly", "parallel", "serde-serialize"]} #"enhanced-determinism", "wasm-bindgen"]
# Bevy
bevy_ecs = "0.9.0"
bevy_derive ="0.9.0"

egui = { version = "0.19.0", optional = true, default-features = false, features = [
    "bytemuck", 
] }

# Remove/Replace:
egui_demo_lib = "0.19.0"
# TODO aquire fonts so this can be removed. low priority
egui_winit_platform = "0.16.0"

type-map = "0.5.0"
instant = "0.1"
tracing = "0.1.35"
# wgpu
cfg-if = "1"
image = "0.24.4"
winit = "0.27"
env_logger = "0.9"
# log = "0.4"
pollster = "0.2"
# update once MemoryUsage can be collected.
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0" 
tobj = { version = "3.2.1", features = [
    "async",
]}
# wasm32 not tested yet.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11" }
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[lib]
path = "src/ne_render.rs" 