[package]
name = "ne_window"
version = "0.1.0"
edition = "2021"
homepage = "https://nightmare-corp.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ne_app = {path = "../ne_app"}
ne_math = {path = "../ne_math"}
uuid = "1.1.2"
winit = "0.27.3"
pollster = "0.2"
instant = "0.1"

[lib]
path = "src/ne_window.rs" 
